--- a/CasualGamesAssignment/CasualGamesAssignment.csproj
+++ b/CasualGamesAssignment/CasualGamesAssignment.csproj
@@ -43,12 +43,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameObjects\Missile.cs" />
     <Compile Include="GameObjects\OpponentShip.cs" />
     <Compile Include="GameObjects\PlayerShip.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="InputEngine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameObjects\Base\SimpleSprite.cs" />
+    <Compile Include="ShipInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
