--- a/CasualGamesAssignment/CasualGamesAssignment.csproj
+++ b/CasualGamesAssignment/CasualGamesAssignment.csproj
@@ -43,8 +43,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
-    <Compile Include="GameObjects\Missile.cs" />
     <Compile Include="GameObjects\OpponentShip.cs" />
+    <Compile Include="GameObjects\Missile.cs" />
+    <Compile Include="GameObjects\AutoShip.cs" />
     <Compile Include="GameObjects\Particle.cs" />
     <Compile Include="GameObjects\PlayerShip.cs" />
     <Compile Include="Helper.cs" />
@@ -59,6 +60,10 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildProgramFiles32)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -70,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
