--- a/CasualGamesAssignment/CasualGamesAssignment.csproj
+++ b/CasualGamesAssignment/CasualGamesAssignment.csproj
@@ -50,6 +50,7 @@
     <Compile Include="GameObjects\PlayerShip.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="InputEngine.cs" />
+    <Compile Include="MainMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameObjects\Base\SimpleSprite.cs" />
@@ -57,6 +58,10 @@
     <Compile Include="ShipUpdate.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNet.SignalR.Client, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Client.2.2.0\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildProgramFiles32)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
