--- a/CasualGamesAssignment/CasualGamesAssignment.csproj
+++ b/CasualGamesAssignment/CasualGamesAssignment.csproj
@@ -82,6 +82,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <Import Project="..\MonoGame-EventDriven-Input\EventDriven_Input.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
